--- a/.github/workflows/update_json.yml
+++ b/.github/workflows/update_json.yml
@@ -30,3 +30,14 @@ jobs:
       - name: Run updater
         run: |
           python update_json.py
+
+      - name: Commit and push if changed
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+
+          git add kanto_images.json
+          git diff --cached --quiet && echo "No changes" && exit 0
+
+          git commit -m "auto: update kanto_images.json"
+          git push
